--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev": "npm run eleventy:dev && npm run sass:watch",
     "start": "npm run dev",
     "debug": "DEBUG=* eleventy",
-    "postcss": "postcss dist/assets/styles/main.css --replace",
+    "postcss": "postcss dist/assets/css/theme.css --replace",
     "sass:prod": "node-sass src/assets/styles/scss/ --output src/assets/styles/  --output-style compressed",
     "sass:dev": "node-sass src/assets/styles/scss/ --output src/assets/styles/ --source-map true --source-map-contents true",
     "sass:watch": "node-sass src/assets/styles/scss/main.scss --output src/assets/styles/ --source-map true --source-map-contents true -w",
